; ModuleID = '/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_handlers.c_com_property_write.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_handlers.c_com_property_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@VT_DISPATCH = common dso_local global i64 0, align 8
@SUCCESS = common dso_local global i64 0, align 8
@DISPATCH_PROPERTYPUT = common dso_local global i32 0, align 4
@DISPATCH_PROPERTYPUTREF = common dso_local global i32 0, align 4
@E_INVALIDARG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"this variant has no properties\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, i8**)* @com_property_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @com_property_write(i32* %0, i32* %1, i32* %2, i8** %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8** %3, i8*** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = bitcast i32* %11 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %9, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = call i64 @V_VT(i32* %14)
  %16 = load i64, i64* @VT_DISPATCH, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %35

18:                                               ; preds = %4
  %19 = call i32 @VariantInit(i32* %10)
  %20 = load i64, i64* @SUCCESS, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @ZSTR_VAL(i32* %22)
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @ZSTR_LEN(i32* %24)
  %26 = load i32, i32* @DISPATCH_PROPERTYPUT, align 4
  %27 = load i32, i32* @DISPATCH_PROPERTYPUTREF, align 4
  %28 = or i32 %26, %27
  %29 = load i32*, i32** %7, align 8
  %30 = call i64 @php_com_do_invoke(%struct.TYPE_3__* %21, i32 %23, i32 %25, i32 %28, i32* %10, i32 1, i32* %29, i32 0)
  %31 = icmp eq i64 %20, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %18
  %33 = call i32 @VariantClear(i32* %10)
  br label %34

34:                                               ; preds = %32, %18
  br label %38

35:                                               ; preds = %4
  %36 = load i32, i32* @E_INVALIDARG, align 4
  %37 = call i32 @php_com_throw_exception(i32 %36, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %38

38:                                               ; preds = %35, %34
  %39 = load i32*, i32** %7, align 8
  ret i32* %39
}

declare dso_local i64 @V_VT(i32*) #1

declare dso_local i32 @VariantInit(i32*) #1

declare dso_local i64 @php_com_do_invoke(%struct.TYPE_3__*, i32, i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @ZSTR_VAL(i32*) #1

declare dso_local i32 @ZSTR_LEN(i32*) #1

declare dso_local i32 @VariantClear(i32*) #1

declare dso_local i32 @php_com_throw_exception(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
